Initial web header

--- a/Omnifoods/resources/css/style.css
+++ b/Omnifoods/resources/css/style.css
@@ -1,16 +1,39 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
+
 html{
     color: #555;
-    font-family: "Lato", "Arial",sans-serif;
+    font-family: "Lato";
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 100;
     text-rendering: optimizeLegibility;
 }
-.row {
+.row{
     width: 1140px;
-    margin: 0px auto 0px auto;
+    margin: 0 auto;
+}
+header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url(images/hero.jpg);
+    background-position: center;
+    background-size: cover;
+    height : 100vh;
+}
+.first-box{
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+        transform: translate(-50%,-50%);
+
+}
+h1{
+    font-size: 240%;
+    margin: 0;
+    color: #fff;
+    font-weight: 300;
+    letter-spacing: 2px;
+    word-spacing: 3px;
 }
