--- a/Omnifoods/resources/css/style.css
+++ b/Omnifoods/resources/css/style.css
@@ -21,12 +21,12 @@ header{
     background-size: cover;
     height : 100vh;
 }
-.first-box{
+.hero-box{
     position: absolute;
     width: 1140px;
     top: 50%;
     left: 50%;
-        transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
 
 }
 h1{
@@ -36,4 +36,46 @@ h1{
     font-weight: 300;
     letter-spacing: 2px;
     word-spacing: 3px;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.btn:link, 
+.btn:visited{
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s ;
+
+}
+.btn-full:link,
+.btn-full:visited{
+    border: 1px solid #e67e22;
+    background-color: #e67e22;    
+    color: #fff;
+
+}
+.btn-ghost:link,
+.btn-ghost:visited{
+    border: 1px solid #e67e22;
+    color: #e67e22;
+
+}
+.btn:hover,
+.btn:active{
+    background-color: #cf6d17;
+    
+}
+.btn-full:hover,
+.btn-full:active{
+    border: 1px solid #e67e22;
+
+}
+.btn-ghost:hover,
+.btn-ghost:active{
+    border: 1px solid #e67e22;
+    color: #fff;
+
 }
